@@ -260,7 +260,6 @@ gint js_state;
 gchar *rpname;
 gchar *rpconsole;
 gchar *rpcontrols;
-gboolean show_media_label;
 gboolean control_instance;
 gchar *playlistname;
 gboolean ok_to_play;
